Fix security form cutting off submit button outline

--- a/mtp_noms_ops/assets-src/stylesheets/views/_security-forms.scss
+++ b/mtp_noms_ops/assets-src/stylesheets/views/_security-forms.scss
@@ -5,8 +5,6 @@
 
 .mtp-security-form {
   margin: 0;
-  overflow: hidden;
-  padding-left: 1px;
 
   .form-control {
     width: 6em;
